# MailingServiceDjango

./: .env.sample  .gitignore  README.md  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/management/commands/: createuser.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options.py
accounts/templates/accounts/: login.html  password_reset_confirm.html  password_reset_request.html  register.html  user_detail.html  user_edit.html  user_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: create_manager_group.py  send_mailing.py
mailing/migrations/: 0001_initial.py  0002_client_user_mailing_user_mailingattempt_user_and_more.py  0003_alter_mailing_options.py
mailing/templates/mailing/: active_mailing.html  base.html  client_delete.html  client_detail.html  client_form.html  client_list.html  home.html  mailing_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_delete.html  message_detail.html  message_form.html  message_list.html  report.html
